@@ -43,6 +43,10 @@ svn trunk
 * Make ``validators.DateConverter`` serialize dates properly (from
   James Gardner).
 
+* You can control the missing message (which by default is just
+  "Missing Value") using the message ``"missing"`` in a validator
+  (also from James Gardner).
+
 * Minor fix to setup.py to make FormEncode more friendly with
   zc.buildout.
 
